Fix invisible text on button

--- a/themes/jamstackthemes/assets/scss/_theme-detail.scss
+++ b/themes/jamstackthemes/assets/scss/_theme-detail.scss
@@ -37,6 +37,7 @@
   .theme-detail-buttons {
     margin-top: 20px;
     a {
+      @extend .button;
       display: inline-block;
     }
   }
